[project]
name = "hf-rmbg-2p0-briaai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.11"
dependencies = [
    "kornia>=0.8.2",
    "pillow>=12.1.0",
    "timm>=1.0.24",
    "torch>=2.0.0,<2.10",
    "torchvision>=0.15.0",
    "transformers==4.52.2",
]
